--- a/investingguideandroidui/app/src/main/res/values/strings.xml
+++ b/investingguideandroidui/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Treasury.gov Securities Auctions </string>
+    <string name="app_name">UY</string>
 </resources>
